Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118741

Windows: QNetworkInformation does not report "metered" feaature

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.4, 6.6.1, 6.7.0 FF
    • 6.5.3
    • Network
    • None
    • Windows
    • c31227a54 (dev), 80b9714d7 (6.6), 29b443a3c (tqtc/lts-6.5)

    Description

      On Windows, the networklistmanager implements QNetworkInformation::Feature::Metered, but both QNetworkInformation::supportedFeatures() and QNetworkInformation:supports(QNetworkInformation::Feature) do not report that is supported.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            manordheim MÃ¥rten Nordheim
            erikv Erik Verbruggen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes