QNetworkInfo[android]: Advertise Metered feature

The Android backend has connected AndroidConnectivityManager's
meteredChanged signal to setMetered() ever since it gained metered
support, but Feature::Metered was never added to the features list.

isMetered() reads the backend value without consulting that list, so
the value itself has been correct all along. supports(Metered) and
supportedFeatures(), however, do not report it, and since the factory
filters on featuresSupported(), loadBackendByFeatures(Metered) fails
to load a backend at all on Android -- the android plugin is the only
one built there, so there is nothing to fall back to and instance()
returns nullptr.

This is the same omission that was fixed for the Windows backend in
QTBUG-118741.

Amends 83ddf49bc71736a19f27e6e8b72831ea72e441cc

[ChangeLog][QtNetwork][QNetworkInformation] Fixed the Android backend
not advertising Feature::Metered, which made supports(Metered) and
loadBackendByFeatures(Metered) fail on Android, even though isMetered()
returned the correct value.

Fixes: QTBUG-148810
Pick-to: 6.11 6.8
Change-Id: I446fefd2771cd8cb1fc3b1dda2eb2fc45fcfa8e0
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit f00ced8d0df829f6ec4507d4784c905888628d6d)